--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Create.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Movies"))
 {
     @Html.AntiForgeryToken()
 
@@ -30,19 +30,10 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.Genres, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2 " })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Genres, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Genres, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReleaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ReleaseDate, new { htmlAttributes = new { @class = "form-control datepicker" } })
                 @Html.ValidationMessageFor(model => model.ReleaseDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -62,7 +53,43 @@
                 @Html.ValidationMessageFor(model => model.TrailerUrl, "", new { @class = "text-danger" })
             </div>
         </div>
+        @if (Model.Genres.Count() == 0)
+        {
+            <div class="form-group genre">
+                <label class="control-label col-md-2" for="Genre1">Genre</label>
+                <div class="col-md-10">
+                    <input class="form-control text-box single-line" data-val="true" data-val-maxlength="The field Genre must be a string." data-val-maxlength-max="500" data-val-required="The Genre field is required." id="Genre1" name="Genres[0].Name" type="text" value="">
+                    <span class="field-validation-valid text-danger" data-valmsg-for="Genres[0].Name" data-valmsg-replace="true"></span>
+                </div>
+            </div>
+        }
+        else {
 
+            for (int i = 0; i < Model.Genres.Count(); i++)
+            {
+                <div class="form-group genre">
+                    @Html.LabelFor(x => Model.Genres[i].Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @if (Model.Genres[i].Name == null)
+                        {
+                            <input class="form-control text-box single-line" data-val="true" data-val-maxlength="The field Genre must be a string." data-val-maxlength-max="500" data-val-required="The Genre field is required." id="Genre@(i+1)" name="Genres[@(i)].Name" type="text" value="">
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Genres[@(i)].Name" data-valmsg-replace="true"></span>
+                        }
+                        else {
+                            @Html.EditorFor(x => Model.Genres[i].Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(x => x.Genres[i].Name, "", new { @class = "text-danger" })
+                        }
+
+                    </div>
+                </div>
+            }
+        }
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="button" class="btn btn-primary" id="AddGenre">Add</button>
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -75,6 +102,7 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/PageScripts/CreateMovie.js"></script>
 }
