Full movies functionalities

--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <ul id="nav-mobile" class="hide-on-med-and-down right">
                     <li>@Html.ActionLink("Add Movie", "Create","Movies")</li>
                     <li>@Html.ActionLink("Add Genre", "Create","Genres")</li>
-                    <li>@Html.ActionLink("All Movies", "All", "Movies"))</li>
+                    <li>@Html.ActionLink("All Movies", "Index", "Movies"))</li>
                 </ul>
             </div>
         </nav>
