--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Index.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Index.cshtml
@@ -7,7 +7,8 @@
 }
 
 <h2>All Movies</h2>
-
+<hr />
+<br />
 <table id="movies-data-table-admin" cellspacing="0" width="100%" class="hover row-border" data-url="@(url)">
     <thead>
         <tr>
@@ -31,7 +32,7 @@
     </a>
     <ul>
         <li><a title="Delete" id="delete-movie" data-url="@(deleteRowsUrl)" class="btn-floating btn-large waves-effect waves-light red "><i class="material-icons">delete</i></a></a></li>
-        <li><a title="Publish" id="undo-delete-movie" data-url="@(undoDelete)" class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">publish</i></a></li>
+        <li><a title="Activate" id="undo-delete-movie" data-url="@(undoDelete)" class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">publish</i></a></li>
         <li><a title="Edit" id="edit-movie" data-url="@(editMovie)" class="btn-floating btn-large waves-effect waves-light yellow darken-1"><i class="material-icons">mode_edit</i></a></li>
     </ul>
 </div>
