--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Create.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Create.cshtml
@@ -21,10 +21,11 @@
 
             @Html.AntiForgeryToken()
             <div class="row">
+                
                 <div class="input-field col s6 name-container">
                     @Html.LabelFor(model => model.Name)
-                    @Html.EditorFor(model => model.Name)
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "red-text text-darken-4" })
+                    @Html.EditorFor(model => model.Name , new { htmlAttributes = new { data_length = "5" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "red-text text-darken-4"})
                 </div>
                 <div class="col s6">
                     @Html.LabelFor(model => model.ReleaseDate)
@@ -34,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    @Html.TextAreaFor(model => model.Description, new { @class = "materialize-textarea" })
+                    @Html.TextAreaFor(model => model.Description, new { @class = "materialize-textarea" , data_length = "20" })
                     @Html.LabelFor(model => model.Description)
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "red-text text-darken-4" })
                 </div>
@@ -93,5 +94,5 @@
 
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Scripts/PageScripts/create-movie.js"></script>
+    <script src="~/Scripts/PageScripts/Admin/create-movie.js"></script>
 }
