--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Edit.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Movies/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Common.Contracts;
-@model TelerikMovies.Web.Areas.Admin.Models.MovieCreateViewModel
+@model TelerikMovies.Web.Areas.Admin.Models.MovieEditViewModel
 @{
     string errors = string.Empty;
     ViewBag.Title = "Edit Movie";
@@ -16,14 +16,14 @@
         <h2>Edit Movie</h2>
         <hr />
         <br />
-        @using (Html.BeginForm("Edit", "Movies", FormMethod.Post, new { @class = "create-movie-form" }))
+        @using (Html.BeginForm("Edit", "Movies", FormMethod.Post, new { @class = "edit-movie-form" }))
             {
-
             @Html.AntiForgeryToken()
+            @Html.HiddenFor(x => x.Id);
             <div class="row">
                 <div class="input-field col s6 name-container">
                     @Html.LabelFor(model => model.Name)
-                    @Html.EditorFor(model => model.Name)
+                    @Html.EditorFor(model => model.Name ,new { htmlAttributes = new { data_length = "5" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "red-text text-darken-4" })
                 </div>
                 <div class="col s6">
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    @Html.TextAreaFor(model => model.Description, new { @class = "materialize-textarea" })
+                    @Html.TextAreaFor(model => model.Description, new { @class = "materialize-textarea", data_length = "20" })
                     @Html.LabelFor(model => model.Description)
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "red-text text-darken-4" })
                 </div>
@@ -56,17 +56,23 @@
             </div>
             <div class="row">
                 @for (int i = 0; i < Model.Genres.Count(); i++)
-                {
+                { 
                     <div class="input-field col s4  genre">
                         @Html.LabelFor(x => Model.Genres[i].Name)
                         @Html.EditorFor(x => Model.Genres[i].Name, new { htmlAttributes = new { @class = "autocomplete", autocomplete = "off" } })
                         @Html.ValidationMessageFor(x => x.Genres[i].Name, "", new { @class = "red-text text-darken-4" })
+                        @if(i>=1)
+                        {
+                        <button class="delete-genre btn-floating  waves-effect waves-light red accent-4 right">
+                            <i class="material-icons small right">delete</i>
+                        </button>
+                        }
                     </div>
                 }
                 <a class="btn-floating btn-large waves-effect waves-light  yellow accent-4" id="AddGenre"><i class="material-icons">add</i></a>
             </div>
             <button class="btn waves-effect waves-light  yellow accent-4" type="submit" name="action">
-                Create
+                Edit
                 <i class="material-icons right">send</i>
             </button>
         }
@@ -75,5 +81,5 @@
 
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Scripts/PageScripts/create-movie.js"></script>
+    <script src="~/Scripts/PageScripts/Admin/edit-movie.js"></script>
 }
