Ready with design Start deleting unused methods

--- a/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         <li>@Html.ActionLink("Edit", "Edit", null, new { @class = "white-text" })</li>
         <li>@Html.ActionLink("All", "GetAll", null, new { @class = "white-text" })</li>
     </ul>
-    <div class="row">
+    <div class="container">
         <div class="offset-s2 col s8">
             <br/>
             @if (messages != null)
