--- a/TelerikMovies/TelerikMovies.Web/Views/Account/Login.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Account/Login.cshtml
@@ -3,59 +3,63 @@
 @{
     ViewBag.Title = "Log in";
 }
-
-<h2>@ViewBag.Title.</h2>
+<div class="row center-align">
+    <h2>Please, login into your account</h2>
+</div>
 <div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
+    <div class="col s5 left left-align">
+        @*<h2>@ViewBag.Title</h2>*@
+    </div>
+    <section id="loginForm" class="col s7 grey lighten-4 z-depth-5">
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <h4>Login</h4>
+            <hr />
+            @Html.ValidationSummary("", new { @class = "red-text text-darken-4" })
+            <div class="row">
+                <div class="input-field offset-s1 col s10 name-container">
+                    @Html.LabelFor(m => m.Email)
+                    @Html.TextBoxFor(m => m.Email)
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "red-text text-darken-4" })
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="row">
+                <div class="input-field offset-s1 col s10 name-container">
+                    @Html.LabelFor(m => m.Password)
+                    @Html.PasswordFor(m => m.Password)
+                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "red-text text-darken-4", data_length = "6" })
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+            </div>
+
+                <div class="row">
+                    <div class="offset-s1 col s3">
+                        <span>Remember Me </span>
+                        @*@Html.LabelFor(m => m.RememberMe)
+                            @Html.CheckBoxFor(m => m.RememberMe)*@
+                    </div>
+                    <div class="col s8">
+                        <div class="switch">
+                            <label>
+                                Off
+                                <input type="checkbox" id="RememberMe" name="RememberMe" value="true" />
+                                <span class="lever"></span>
+                                On
+                            </label>
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                <div class="row">
+                    <div class="input-field offset-s1 col s10 name-container">
+                        <button class="btn waves-effect waves-light  yellow accent-4" type="submit" name="action">
+                            Log in
+                            <i class="material-icons right">send</i>
+                        </button>
+                        <a class="btn waves-effect waves-light  yellow accent-4" href="@Url.Action("Register", "Account")" title="Register"><i class='material-icons left'>person_add</i>Register</a>
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+        }
+    </section>
 </div>
 
 @section Scripts {
