--- a/TelerikMovies/TelerikMovies.Web/Views/Account/Register.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Account/Register.cshtml
@@ -2,40 +2,53 @@
 @{
     ViewBag.Title = "Register";
 }
+<div class="row center-align">
+    <h2>Welcome To Movie Hub</h2>
+</div>
+    <div class="row">
+        <div class="col s5 left left-align">
+            <h2>@ViewBag.Title</h2>
+        </div>
+        <div class="col s7 grey lighten-4 z-depth-5">
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <h4>Create a new account</h4>
+                <hr />
+                @Html.ValidationSummary("", new { @class = "red-text text-darken-4" })
+                <div class="row">
+                    <div class="input-field offset-s1 col s10 name-container">
+                        @Html.LabelFor(m => m.Email)
+                        @Html.TextBoxFor(m => m.Email)
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "red-text text-darken-4" })
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field offset-s1 col s10 name-container">
+                        @Html.LabelFor(m => m.Password)
+                        @Html.PasswordFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "red-text text-darken-4", data_length = "6" })
+                    </div>
+                </div>
+                    <div class="row">
+                        <div class="input-field offset-s1 col s10 name-container">
+                            @Html.LabelFor(m => m.ConfirmPassword)
+                            @Html.PasswordFor(m => m.ConfirmPassword)
+                            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "red-text text-darken-4", data_length = "6" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field offset-s1 col s10 name-container">
+                            <button class="btn waves-effect waves-light  yellow accent-4" type="submit" name="action">
+                                Create
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                    </div>
+            }
+        </div>
+    </div>
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
