--- a/TelerikMovies/TelerikMovies.Web/Views/Manage/ChangePassword.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Manage/ChangePassword.cshtml
@@ -2,39 +2,56 @@
 @{
     ViewBag.Title = "Change Password";
 }
+<div class="row">
+    <br />
+    <div class="col s5 left left-align">
+        <h2>@ViewBag.Title</h2>
+    </div>
+    <div class="col s7 grey lighten-4 z-depth-5">
+        <br />
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" }))
+            {
+            @Html.AntiForgeryToken()
+            <h4>Change Password Form</h4>
+            <hr />
+            <div class="row">
+                <div class="input-field offset-s1 col s10 ">
+                    @Html.ValidationSummary("", new { @class = "red-text text-darken-4" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field offset-s1 col s10 ">
+                    @Html.LabelFor(m => m.OldPassword)
+                    @Html.PasswordFor(m => m.OldPassword)
+                    @Html.ValidationMessageFor(m => m.OldPassword, "", new { @class = "red-text text-darken-4", data_length = "6" })
+                </div>
+            </div>
+                <div class="row">
+                    <div class="input-field offset-s1 col s10 ">
+                        @Html.LabelFor(m => m.NewPassword)
+                        @Html.PasswordFor(m => m.NewPassword)
+                        @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "red-text text-darken-4", data_length = "6" })
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field offset-s1 col s10 ">
+                        @Html.LabelFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "red-text text-darken-4", data_length = "6" })
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="offset-s1 col s10 ">
+                        <button class="btn waves-effect waves-light  yellow accent-4" type="submit" name="action">
+                            Change password
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
+                </div>
+        }
+    </div>
+</div>
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
-        </div>
-    </div>
-}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
