Edit User info data

--- a/TelerikMovies/TelerikMovies.Web/Views/Shared/_Layout.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
         <div class="footer-copyright">
             <div class="row">
                 <div class="col s12 center-align">
-                    <a class="waves-effect waves-light btn btn-flat" href="@Url.Action("Contact", "Home")" title="Contact"><i class='material-icons left'>contact_mail</i>Contact</a>
-                    <a class="waves-effect waves-light btn btn-flat" href="@Url.Action("About", "Home")" title="About"><i class='material-icons left'>info</i>About</a>
+                    <a class="waves-effect waves-purple btn btn-flat footer-button " href="@Url.Action("Contact", "Home")" title="Contact"><i class='material-icons left'>contact_mail</i>Contact</a>
+                    <a class="waves-effect waves-purple btn btn-flat footer-button" href="@Url.Action("About", "Home")" title="About"><i class='material-icons left'>info</i>About</a>
                 </div>
                 <div class="col s12">
                     <div class="container">
