--- a/TelerikMovies/TelerikMovies.Web/Content/Site.css
+++ b/TelerikMovies/TelerikMovies.Web/Content/Site.css
@@ -10,9 +10,13 @@
     -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
     transform: rotate(-7deg);
 }
+.footer-button:hover {
+    background-color:#ff4081;
+}
 .primary-color {
     background-color:#ab47bc;
 }
+
 .secondary-color {
     background-color:#ffd600;
 }
