--- a/TelerikMovies/TelerikMovies.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,10 @@
             <li class="center-align"><span>@User.Identity.GetUserName()</span></li>
             <li><a class="waves-effect waves-light btn pink accent-1" href="@Url.Action("Index", "Manage")" id="registerLink" title="Manage"><i class='material-icons left'>settings_applications</i>Manage</a></li>             
             <li><a class="waves-effect waves-light btn pink accent-1" href="javascript:document.getElementById('logoutForm').submit()"><i class='material-icons left'>power_settings_new</i>Log off</a></li>
+            if (User.IsInRole("Admin"))
+            {
+                <li><a class="waves-effect waves-light btn pink accent-1" href="@Url.Action("Index", "Movies",new { Area = "Admin" })" id="registerLink" title="Admin"><i class='material-icons left'>settings_applications</i>Admin Area</a></li>
+            }
     }
 }
 else
