--- a/TelerikMovies/TelerikMovies.Web/Views/Movies/Details.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Movies/Details.cshtml
@@ -1,53 +1,56 @@
 ﻿@model TelerikMovies.Web.Models.Movie.DetailedMovieViewModel
 @{
     ViewBag.Title = "Details";
+    var id = Model.Id.ToString();
+    var date = Model.ReleaseDate.ToString("dd MMM yyyy");
 }
 
 
 
 <div class="row">
-    <div class="col s4 left left-align z-depth-5 portrait">
-        <div class="container">
-                <img id="movie-photo" class="materialboxed responsive-img"  width="250" src="@(Model.ImgUrl)" />
+    <div class="col s12 m12 l5">
+        <div class="container movie-foto-container">
+            <img id="movie-photo" class="materialboxed responsive-img" width="270" src="@(Model.ImgUrl)" />
+        </div>
+        <div class="row">
+            <div class="input-field offset-s2 col s9">
+                <span>Release Date: @date</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-s3 col s3">
+                <i class="material-icons left vote">thumb_up</i>
+                @Model.Likes
+            </div>
+            <div class="col s3">
+                <i class="material-icons left vote">thumb_down</i>
+                @Model.Dislikes
+            </div>
         </div>
     </div>
-    <div class="col s7 offset-s1  grey lighten-4 z-depth-5">
-        @using (Html.BeginForm("Edit", "Account", FormMethod.Post, new { role = "form", @class = "show-loader" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4>Edit your accout info</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "red-text text-darken-4" })
-            <div class="row">
-                <div class="input-field offset-s1 col s10">
-                    @Html.DisplayNameFor(m => m.Name);
-                </div>
+    <div class="col s12 m12 l7">
+        <h4>@Model.Name</h4>
+        <div class="video-container">
+            <iframe width="100%" height="auto" src="@Model.TrailerUrl" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <span>Info: </span>
+                @Html.DisplayFor(m => m.Description)
             </div>
-            <div class="row">
-                <div class="input-field offset-s1 col s10">
-                     @Html.DisplayFor(m => m.ReleaseDate);
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field offset-s1 col s10">
-                    @Html.DisplayFor(m => m.Description);
-                </div>
-            </div>
-                @Html.Hidden(User.)
-              
-                <div class="row">
-                    <div class="input-field offset-s1 col s10 name-container">
-                        <button class="btn waves-effect waves-light  yellow accent-4" type="submit" name="action">
-                            Submit
-                            <i class="material-icons right">send</i>
-                        </button>
-                    </div>
-                </div>
-        }
+        </div>
+        @Html.Action("GetAllNotDeletedCommentsForAMovie", "Comments", new { id = id })
+        @Html.Hidden(User.Identity.Name)
+        @Html.Hidden(id)
     </div>
+   
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Scripts/PageScripts/details-movie.js"></script>
+}
+
+@section css{
+    <link href="~/Content/PageCss/detail-movie.css" rel="stylesheet" />
 }
