--- a/TelerikMovies/TelerikMovies.Web/Views/Movies/Details.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Movies/Details.cshtml
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="col s12 m12 l7">
-        <h4>@Model.Name</h4>
+        <h4 class="title-shadow">@Model.Name</h4>
         <div class="video-container z-depth-5">
             <iframe src="@Model.TrailerUrl" frameborder="0" allowfullscreen></iframe>
         </div>
