--- a/TelerikMovies/TelerikMovies.Web/Views/Movies/Index.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Movies/Index.cshtml
@@ -35,7 +35,7 @@
 <div id="movies-main-content">
     @{Html.RenderAction("RenderCarousel");}
     <div class="col s12">
-        <h5 class="center-align">Top Movies in our collection</h5>
+        <h5 class="center-align title-shadow">Top Movies in our collection</h5>
     </div>
     @{Html.RenderAction("RenderTopMovies");}
 </div>
