--- a/TelerikMovies/TelerikMovies.Web/Views/Account/Login.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
     <h2>Please, login into your account</h2>
 </div>
 <div class="row">
-    <section id="loginForm" class="col s6 offset-s3 grey lighten-4 z-depth-5">
+    <section id="loginForm" class="col s12 m8 l6 offset-m2 offset-l3 grey lighten-4 z-depth-5">
         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
         {
             @Html.AntiForgeryToken()
