--- a/TelerikMovies/TelerikMovies.Web/Views/Account/Register.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
     <h2>Welcome To Movie Hub</h2>
 </div>
     <div class="row">
-        <div class="col s6 offset-s3 grey lighten-4 z-depth-5">
+        <div class="col s12 m8 l6 offset-m2 offset-l3 grey lighten-4 z-depth-5">
             @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
