--- a/TelerikMovies/TelerikMovies.Web/Views/Shared/_Layout.cshtml
+++ b/TelerikMovies/TelerikMovies.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <nav class="purple lighten-1">
             <div class="nav-wrapper">
                 <a href="/home/index" class="brand-logo left">
-                    <img class="logo" src="~/Img/Logo.png" />
+                    <img class="logo shadowed"  src="~/Img/Logo.png" />
                 </a>
                 <a href="#" data-activates="mobile-menu" class="button-collapse right"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="hide-on-med-and-down right">
